--- a/exe/config3.json
+++ b/exe/config3.json
@@ -43,9 +43,9 @@
 	},
 
 	"controlCenter" : {
-		"enabled" : false,
-		"account" : "E003",
-		"password" : "E003_pass"
+		"enabled" : true,
+		"account" : "e003",
+		"password" : "e003"
 	},
 
 	"watchdog" : {
